package edu.uees.tutorias.domain;

public class Estudiante extends Usuario {

    public Estudiante(String id, String nombre, String correo) {
        super(id, nombre, correo);
    }
}
