@startuml

skinparam classAttributeIconSize 0

abstract class Usuario {
    - id: String
    - nombre: String
    - correo: String
    + getId(): String
    + getNombre(): String
    + getCorreo(): String
}

class Estudiante {
}

class Docente {
    - horariosDisponibles: List<HorarioDisponible>
    + agregarHorario(horario: HorarioDisponible): void
    + eliminarHorario(horarioId: String): void
    + estaHorarioDisponible(horarioId: String): boolean
    + obtenerHorario(horarioId: String): HorarioDisponible
    + obtenerHorariosDisponibles(): List<HorarioDisponible>
}

class HorarioDisponible {
    - id: String
    - inicio: LocalDateTime
    - fin: LocalDateTime
    - disponible: boolean
    + reservar(): void
    + liberar(): void
    + getId(): String
    + getInicio(): LocalDateTime
    + getFin(): LocalDateTime
    + estaDisponible(): boolean
}

enum EstadoReserva {
    PENDIENTE
    CONFIRMADA
    CANCELADA
}

class ReservaTutoria {
    - id: String
    - estudiante: Estudiante
    - docente: Docente
    - horario: HorarioDisponible
    - estado: EstadoReserva
    + confirmar(): void
    + cancelar(): void
    + reprogramar(nuevoHorario: HorarioDisponible): void
    + getId(): String
    + getEstudiante(): Estudiante
    + getDocente(): Docente
    + getHorario(): HorarioDisponible
    + getEstado(): EstadoReserva
}

interface RepositorioReservas {
    + guardar(reserva: ReservaTutoria): void
    + buscarPorId(id: String): Optional<ReservaTutoria>
    + buscarTodas(): List<ReservaTutoria>
}

interface Notificador {
    + notificar(usuario: Usuario, mensaje: String): void
}

class RepositorioReservasEnMemoria
class NotificadorConsola

class ServicioReservas {
    - repositorio: RepositorioReservas
    - notificador: Notificador
    + crearReserva(estudiante: Estudiante, docente: Docente, horarioId: String): ReservaTutoria
    + confirmarReserva(reservaId: String): void
    + cancelarReserva(reservaId: String): void
    + reprogramarReserva(reservaId: String, nuevoHorarioId: String): void
}

Usuario <|-- Estudiante
Usuario <|-- Docente

Docente "1" *-- "0..*" HorarioDisponible
ReservaTutoria "1" --> "1" Estudiante
ReservaTutoria "1" --> "1" Docente
ReservaTutoria "1" --> "1" HorarioDisponible

ServicioReservas --> RepositorioReservas
ServicioReservas --> Notificador

RepositorioReservas <|.. RepositorioReservasEnMemoria
Notificador <|.. NotificadorConsola

@enduml
